style:fixed login form to be more responsive on mobile

--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -31,3 +31,17 @@
   padding-top: 1rem;
   cursor: pointer;
 }
+
+@media (max-width: 800px) {
+  .login-container {
+    max-width: 100vw;
+    height: 100vh;
+    margin-top: 0.2rem;
+    touch-action: none;
+    top: 0;
+  }
+
+  .form-input {
+    width: 80%;
+  }
+}
